swager update
